--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,11 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fl_container"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/root_nav"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
